plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
//    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
}

group = 'com.komentum'
version = '0.0.1-SNAPSHOT'

springBoot {
    mainClass = 'com.komentum.KomentumApplication'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

bootJar {
    enabled = true
    archiveFileName = "kakao-theme-maker.jar"
}

jar {
    enabled = false
}

test {
//    filter {
//        excludeTestsMatching("com.komentum.theme.*")
//    }
    useJUnitPlatform()
}

dependencies {
    // web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // webclient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    // spring-security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // spring oauth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.mysql:mysql-connector-j'
    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // Jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    // aws s3 api
    implementation 'software.amazon.awssdk:s3:2.31.63'
    // dev : swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
    // dev : java-faker
    implementation('com.github.javafaker:javafaker:1.0.2') { exclude module: 'snakeyaml' }
    implementation 'org.yaml:snakeyaml:2.0'
    // google token verify
    implementation 'com.google.api-client:google-api-client:2.0.0'
    implementation 'com.google.http-client:google-http-client-gson:1.43.3'
    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    // test : h2 database
    testImplementation 'com.h2database:h2'
    // test: redis embedded
    testImplementation 'com.github.codemonstur:embedded-redis:1.4.3'
    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    // mapstruct
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    //QueryDsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
}

// ### config settings start
tasks.register('copyConfig', Copy) {
    from("${rootProject.projectDir}/backend_config/dev/monolithic") {
        include 'application.yml'
    }
    into './src/main/resources/'
}
tasks.register("copyTestConfig", Copy) {
    from("${rootProject.projectDir}/backend_config/dev/monolithic") {
        include 'application-test.yml'
        include 'keystore/test/release.jks'
    }
    into './src/test/resources/'
}
processResources.dependsOn(copyConfig)
processTestResources.dependsOn(copyTestConfig)
// ### config settings end

// ### query-dsl settings start
def generated = 'src/main/generated'
// query-dsl가 생성한 QClass를 src/main/generated에 추가
tasks.withType(JavaCompile) {
    options.getGeneratedSourceOutputDirectory().set(file(generated))
}
// src/main/generated의 코드를 Java 코드로 인식하도록 설정
sourceSets {
    main.java.srcDirs += [generated]
}
// gradle clean 시 QClass 삭제
clean {
    delete file(generated)
}
// ### query-dsl settings end